src/components/Tictactoe/Game/Templates/DesktopGame/DesktopGame.css
/* Desktop layout specific styles */

/* Main game container for large screens (laptop, large tablets, desktops etc.) */
.t3-box--desk {
    padding: 0.625rem; /* 10px */
}

/* Game layout container with two columns */
.t3-layout--2-cols {
    /*margin: 0.625rem;*/ /* 10px */
    flex-direction: row;
    gap: 0.625rem; /* 10px = 0.625rem. Space between columns */
}

/* Left column */
.t3-layout__left {
    flex: 1; /* The left column takes 1 part of the available space */
    display: flex;
    flex-direction: column; /* Arranging elements vertically */
    gap: 0.625rem; /* 10px = 0.625rem. Space between elements in the left column */
}

/* Right column */
.t3-layout__right {
    flex: 1.2;
    display: flex; /* The right column takes 1.25 parts of space compared to the left */
    flex-direction: column; /* Arranging elements vertically */
    max-width: 31.25rem; /* 500px = 31.25rem */
    box-sizing: border-box;
    overflow-x: hidden;
    background-color: #f1f1f1;
}

/* GAME CONTROLS BUTTONS */
.t3-layout__left-game-controls {
    display: block;
}

/* The horizontal menus on the LEFT (stopwatch, game controls) */
.t3-layout__left .horiz-controls {
    border-radius: 0.375rem; /* 6px = 0.375rem */
}

/* GAME STATUS */
/* For all statuses */
.t3-layout__right .t3-status-wrapper {
    margin-bottom: 0.625rem; /* 10px = 0.625rem */
}

.t3-layout__right .t3-status {
    border-radius: 0.3125rem; /* 5px = 0.3125rem */
}

/* For the viewing history status */
.t3-layout__right .t3-status--vh {
    border-radius: 0.5rem; /* 0.5rem = 8px */
}

/* For the status within a game status */
.t3-layout__right .t3-status-vh__inline {
    border-radius: 0.5rem  0; /* 8px = 0.5rem */
}

/* History moves list container */
.t3-layout__right-moves {
    padding: 0 0.5rem 0.625rem 0.625rem; /* 10px = 0.625rem. Right padding: 10px-2px (list of moves scroll size) = 0.5rem */
    border: 1px solid #ddd;
    border-radius: 0.3125rem; /* 5px = 0.3125rem */
    background-color: snow;
    display: flex;
    flex-direction: column; /* Arranging elements vertically */
    flex: 1; /* Allowing the container to take up available space */
    min-height: 0; /* Setting minimum height to 0 to prevent overflow */
    overflow: hidden;
}

/** STANDARD 2-COLUMNS **/
@media (min-height: 481px) or (min-width: 769px) {
    /** GAME INFO **/
    .t3-layout__game-info  {
        padding: 0.625rem; /* 0.625rem = 10px */
    }
}

/** COMPACT 2-COLUMNS. Layout for smaller screens with compact elements due to limited space. **/
@media (max-height: 480px) or (max-width: 768px) {
    /** LEFT PART **/

    /** Horizontal controls (game controls and stopwatch) on the left side of the layout **/
    .t3-layout__left .horiz-controls,
    .t3-layout__left .horiz-controls .row-cont {
        gap: 0.625rem; /* 10px = 0.625rem */
    }

    /** GAME INFO **/
    .t3-layout__game-info  {
        padding: 0.625rem; /* 10px = 0.625rem */
    }

    /** GAME STOPWATCH **/
    .t3-layout__left-stopwatch {
        height: 3.125rem;  /* 50px = 3.125rem */
    }

    .t3-layout__left-stopwatch .time-viewer {
        gap: 0.5rem; /* 8px = 0.5rem */
    }

    .t3-layout__left-stopwatch .time-separator {
        font-size: 1.25rem; /* 20px = 1.25rem */
        top: 0.3125rem; /* 5px = 0.3125rem */
    }

    .t3-layout__left-stopwatch .value {
        font-size: 1.25rem; /* 20px = 1.25rem */
        width: 2rem; /* 32px = 2rem */
        height: 2rem; /* 32px = 2rem */
    }

    .t3-layout__left-stopwatch .label {
        font-size: 0.625rem; /* 10px = 0.625rem */
    }

    /** GAME STATUS **/
    .t3-layout__right .t3-status__body {
        font-size: 1.0625rem; /* 17px = 1.0625rem */
    }

    /** HISTORY MOVES **/
    .t3-layout__right-moves .history-list li {
        padding: 0.4rem 1rem 0.4rem 2.5rem;
        font-size: 0.75rem; /* 12px = 0.75rem */
    }

    /* Moves controls (sort and navigation) **/
    .t3-layout__right .moves-sort-bar {
        padding: 0.3125rem; /* 5px = 0.3125rem */
    }

    .t3-layout__right-moves .sort-label {
        font-size: 0.8125rem; /* 13px = 0.8125rem */
    }

    .t3-layout__right-moves .sort-field {
        font-size: 0.75rem; /* 12px = 0.75rem */
        padding: 0.3125rem 0.1875rem; /* 5px = 0.3125rem, 3px = 0.1875rem */
    }

    .t3-layout__right-moves .sort-arrow {
        width: 2.1875rem;  /* 35px = 2.1875rem */
        height: 1.5625rem; /* 25px = 1.5625rem */
    }

    .t3-layout__right-moves .btn-nav {
        height: 1.25rem; /* 1.25rem = 20px */
        font-size: 1.125rem; /* 1.125rem = 18px */
    }
}

